Fix logic error in Rendition parsing code

Make the rendition object invalid when both P an C entries are not
present or are invalid in Media Rendition dictionary.

https://bugs.freedesktop.org/show_bug.cgi?id=47063